--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="registerViewModel"
+            type="com.chardon.faceval.android.ui.login.RegisterViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
