--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="purple_200">#CE93D8</color>
     <color name="purple_500">#9C27B0</color>
     <color name="purple_700">#7B1FA2</color>
+    <color name="purple_900">#4A148C</color>
 
     <color name="teal_200">#80CBC4</color>
     <color name="teal_700">#00796B</color>
