--- a/app/src/main/res/layout/activity_scoring.xml
+++ b/app/src/main/res/layout/activity_scoring.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="scoringViewModel"
+            type="com.chardon.faceval.android.ui.scoring.ScoringViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
