--- a/app/src/main/res/layout/activity_scoring.xml
+++ b/app/src/main/res/layout/activity_scoring.xml
@@ -80,9 +80,8 @@
 
         </LinearLayout>
 
-        <androidx.fragment.app.FragmentContainerView
+        <include layout="@layout/fragment_loading"
             android:id="@+id/loading"
-            android:name="com.chardon.faceval.android.ui.LoadingFragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
@@ -90,7 +89,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5" />
+            app:layout_constraintVertical_bias="0.5"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/upperLoading"
