--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,22 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.FacevalAndroid" parent="Theme.AppCompat.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/light_blue_200</item>
-        <item name="colorPrimaryVariant">@color/light_blue_200</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="android:textColorPrimary">@color/gray_100</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/amber_200</item>
-        <item name="colorSecondaryVariant">@color/orange_200</item>
-        <item name="colorOnSecondary">@color/gray_900</item>
-        <item name="android:textColorSecondary">@color/gray_800</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorOnSecondary</item>
-        <!-- Customize your theme here. -->
-    </style>
-
-    <style name="Theme.FacevalAndroid.Material" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.FacevalAndroid" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/light_blue_200</item>
         <item name="colorPrimaryVariant">@color/light_blue_200</item>
